#04 back(db) - Configuration Multiples conexions

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,22 +1,22 @@
 # App
 APP_NAME=express-typescript-starter
-APP_PORT=3000
+APP_PORT=3031
 APP_ROUTE_PREFIX=/api
 JWT_SECRET=RANDOM_STRING_5729151279
-APP_URL=http://localhost:3000
+APP_URL=http://localhost:3031
 
 # DB
-TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=127.0.0.1
-TYPEORM_PORT=3306
-TYPEORM_USERNAME=kutia
-TYPEORM_PASSWORD=6028201644
-TYPEORM_DATABASE=express-typescript
-TYPEORM_SYNCHRONIZE=false
-TYPEORM_LOGGING=TRUE
-TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
-TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
-TYPEORM_DRIVER_EXTRA='{"bigNumberStrings": false}'
+DB_CONNECTION=mysql
+DB_HOST_DEV=localhost
+DB_PORT_DEV=3332
+DB_USERNAME_DEV=dev
+DB_PASSWORD_DEV=dev
+DB_DATABASE_DEV=dev
+DB_SYNCHRONIZE=false
+DB_LOGGING=TRUE
+DB_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
+DB_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
+DB_DRIVER_EXTRA='{"bigNumberStrings": false}'
 
 # MAIL
 MAIL_PROVIDER=smtp
@@ -26,6 +26,8 @@ MAIL_AUTH_USER=example@gmail.com
 MAIL_AUTH_PASSWORD=password
 MAIL_FROM_NAME='My App'
 
+FORWARD_MAILHOG_PORT=
+
 # Cron Jobs
 ENABLE_CRON_JOBS=false
 
@@ -33,10 +35,10 @@ ENABLE_CRON_JOBS=false
 ENABLE_GRAPHQL=true
 
 # Path
-TYPEORM_ENTITIES_DIR=src/api/models
-TYPEORM_MIGRATIONS_DIR=src/database/migrations
-TYPEORM_SEEDING_FACTORIES=src/database/factories/**/*{.ts,.js}
-TYPEORM_SEEDING_SEEDS=src/database/seeds/**/*{.ts,.js}
+DB_ENTITIES_DIR=src/database/models
+DB_MIGRATIONS_DIR=src/database/migrations
+DB_SEEDING_FACTORIES=src/database/factories/**/*{.ts,.js}
+DB_SEEDING_SEEDS=src/database/seeds/**/*{.ts,.js}
 CONTROLLERS_DIR=/api/controllers/**/*Controller{.ts,.js}
 CRON_JOBS_DIR=/api/cron-jobs/**/*Job{.ts,.js}
 MIDDLEWARES_DIR=/infrastructure/middlewares/**/*{.ts,.js}
