--- a/packages/backend/.env.development
+++ b/packages/backend/.env.development
@@ -1,22 +1,29 @@
 # App
 APP_NAME=express-typescript-starter
-APP_PORT=3030
+APP_PORT=3031
 APP_ROUTE_PREFIX=/api
 JWT_SECRET=RANDOM_STRING_5729151279
-APP_URL=http://localhost:3030
+APP_URL=http://localhost:3031
 
 # DB
-TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=localhost
-TYPEORM_PORT=3306
-TYPEORM_USERNAME=kutia
-TYPEORM_PASSWORD=6028201644
-TYPEORM_DATABASE=express-typescript
-TYPEORM_SYNCHRONIZE=false
-TYPEORM_LOGGING=TRUE
-TYPEORM_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
-TYPEORM_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
-TYPEORM_DRIVER_EXTRA='{"bigNumberStrings": false}'
+DB_CONNECTION=mysql
+DB_SYNCHRONIZE=false
+DB_LOGGING=TRUE
+DB_ENTITIES=src/api/models/**/*.ts,src/api/models/**/*.js
+DB_MIGRATIONS=src/database/migrations/*.ts,src/database/migrations/*.js
+DB_DRIVER_EXTRA='{"bigNumberStrings": false}'
+
+DB_HOST_DEV=localhost
+DB_PORT_DEV=3332
+DB_USERNAME_DEV=dev
+DB_PASSWORD_DEV=dev
+DB_DATABASE_DEV=dev
+
+DB_HOST_STAGE=localhost
+DB_PORT_STAGE=3332
+DB_USERNAME_STAGE=root
+DB_PASSWORD_STAGE=dev
+DB_DATABASE_STAGE=stage
 
 # MAIL
 MAIL_PROVIDER=smtp
@@ -35,10 +42,10 @@ ENABLE_CRON_JOBS=false
 ENABLE_GRAPHQL=true
 
 # Path
-TYPEORM_ENTITIES_DIR=src/api/models
-TYPEORM_MIGRATIONS_DIR=src/database/migrations
-TYPEORM_SEEDING_FACTORIES=src/database/factories/**/*{.ts,.js}
-TYPEORM_SEEDING_SEEDS=src/database/seeds/**/*{.ts,.js}
+DB_ENTITIES_DIR=src/database/models
+DB_MIGRATIONS_DIR=src/database/migrations
+DB_SEEDING_FACTORIES=src/database/factories/**/*{.ts,.js}
+DB_SEEDING_SEEDS=src/database/seeds/**/*{.ts,.js}
 CONTROLLERS_DIR=/api/controllers/**/*Controller{.ts,.js}
 CRON_JOBS_DIR=/api/cron-jobs/**/*Job{.ts,.js}
 MIDDLEWARES_DIR=/infrastructure/middlewares/**/*{.ts,.js}
