--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.0",
   "description": "Express typescript.",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/main.ts",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/server.ts",
     "start": "npm run build && cross-env NODE_ENV=production node ./dist/main.js",
     "build": "tsc",
     "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm --config src/config/db.ts",
     "typeorm2": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/config/db.ts",
     "make:migration": "ts-node ./node_modules/.bin/typeorm migration:create -n",
-    "migrate:dev": "cross-env NODE_ENV=development yarn typeorm2 migration:run",
+    "migrate:dev": "cross-env NODE_ENV=development yarn typeorm migration:run",
+    "migration:run:dev": "cross-env NODE_ENV=development yarn typeorm2 migration:run -c dev",
+    "migration:run:stage": "cross-env NODE_ENV=development yarn typeorm2 migration:run -c stage",
     "migrate": "yarn typeorm2 migration:run",
     "seed:config": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js config",
     "db:seed": "ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
-    "db:seed:dev": "NODE_ENV=development ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "db:seed:dev": "cross-env NODE_ENV=development ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed -c stage",
+    "db:seed:stage": "cross-env NODE_ENV=development ts-node -r ./fix-module-alias.js ./node_modules/typeorm/cli.js migration:run -f ./src/config/db-seed.ts -c stage",
     "db:seed:production": "NODE_ENV=production ts-node -r ./fix-module-alias.js ./node_modules/typeorm-seeding/dist/cli.js seed",
     "code:format": "prettier --write \"src/**/*.{ts,css,js,html}\"",
     "code:check": "prettier --check \"src/**/*.{ts,css,js,html}\"",
@@ -60,6 +63,7 @@
     "type-graphql": "^1.1.1",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.37",
+    "typeorm-naming-strategies": "^3.0.0",
     "typeorm-seeding": "^1.6.1",
     "typeorm-simple-query-parser": "^1.0.16",
     "typeorm-typedi-extensions": "^0.4.1",
