--- a/packages/frontend-nuxtjs/.prettierrc
+++ b/packages/frontend-nuxtjs/.prettierrc
@@ -1,10 +1,4 @@
 {
-  "arrowParens": "always",
-  "bracketSpacing": true,
   "semi": false,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "tabWidth": 2,
-  "useTabs": false,
-  "printWidth": 100
+  "singleQuote": true
 }
