--- a/packages/frontend-nuxtjs/package.json
+++ b/packages/frontend-nuxtjs/package.json
@@ -1,92 +1,58 @@
 {
-  "name": "nuxt-typescript-vuetify-starter",
+  "name": "frontend-nuxtjs",
   "version": "1.0.0",
-  "author": "Johannes Lauter",
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "dev": "nuxt dev --port 3026",
+    "dev": "nuxt",
     "build": "nuxt build",
+    "start": "nuxt start",
     "generate": "nuxt generate",
-    "start": "nuxt start --port 3026",
-    "lint": "eslint --ext .ts,.js,.vue .",
-    "lint:fix": "eslint --ext '*/**/*.{js,ts,vue}' src/ --fix",
-    "pretty:code": "prettier ./src/**/*.{ts,tsx}  --color --write",
-    "post-update": "yarn upgrade --latest",
-    "now-build": "nuxt build --spa",
-    "test": "jest",
-    "test:watch": "yarn test -- --watch",
-    "cy:run": "cypress run"
+    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
+    "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:js && yarn lint:style && yarn lint:prettier",
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix",
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.1",
-    "@nuxtjs/moment": "^1.6.1",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "core-js": "^3.8.2",
-    "deepmerge": "^4.2.2",
-    "http-server": "^0.12.3",
-    "material-design-icons-iconfont": "^6.1.1",
-    "nuxt": "2.15.3",
-    "ts-node": "^10.4.0",
-    "vee-validate": "^3.4.13",
-    "vue-property-decorator": "^9.1.2",
-    "vuetify": "^2.6.3",
-    "vuetify-loader": "^1.4.3",
-    "vuex-class": "^0.3.2",
-    "vuex-module-decorators": "^2.0.0"
+    "core-js": "^3.19.3",
+    "nuxt": "^2.15.8",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.6.5",
+    "vuetify-loader": "^1.7.3",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-private-methods": "^7.16.11",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@forked-prs/nuxt-facebook-pixel-module": "^1.5.1",
-    "@nuxt/types": "^2.14.12",
-    "@nuxt/typescript-build": "^2.0.4",
-    "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/stylelint-module": "^4.0.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.15",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^1.1.2",
+    "@nuxtjs/stylelint-module": "^4.1.0",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cypress": "^6.3.0",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-prettier-vue": "^2.1.1",
-    "eslint-plugin-vue": "^7.8.0",
-    "fibers": "^5.0.1",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "sass": "1.25.0",
-    "sass-loader": "7.3.1",
-    "stylelint": "^13.8.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-standard": "^20.0.0",
-    "ts-jest": "^26.4.4",
-    "tslint-config-standard": "^9.0.0",
-    "vue-jest": "^3.0.4",
-    "vue-slider-component": "^3.2.11"
-  },
-  "engines": {
-    "node": ">=10"
-  },
-  "resolutions": {
-    "lodash": "^4.17.15",
-    "node-fetch": "^2.6.0"
+    "babel-jest": "^27.4.4",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "husky": "^7.0.4",
+    "jest": "^27.4.4",
+    "postcss-html": "^1.3.0",
+    "prettier": "^2.5.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "ts-jest": "^27.1.1",
+    "vue-jest": "^3.0.4"
   }
 }
