--- a/packages/frontend-nuxtjs/tsconfig.json
+++ b/packages/frontend-nuxtjs/tsconfig.json
@@ -3,46 +3,19 @@
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "jsx": "preserve",
-    "lib": [
-      "ESNext",
-      "ESNext.AsyncIterable",
-      "DOM"
-    ],
+    "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
     "strict": true,
     "noEmit": true,
     "experimentalDecorators": true,
-    "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "./src/*"
-      ],
-      "@/*": [
-        "./src/*"
-      ]
+      "~/*": ["./*"],
+      "@/*": ["./*"]
     },
-    "types": [
-      // "node",
-      "@nuxt/types",
-      // "@types/node",
-      // "@nuxtjs/axios",
-      // "cypress",
-      "jest",
-      // "vuetify",
-      // "@types/jest",
-    ]
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node"]
   },
-
-  "include": ["**/*.ts", "**/*.js", "**/*.vue"],
-  // "include": ["src/**/*", "__tests__/**/*"],
-  "exclude": [
-    "node_modules",
-    ".nuxt",
-    "dist",
-    "cypress",
-  ]
+  "exclude": ["node_modules", ".nuxt", "dist"]
 }
